# sorth

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
examples/: file_exec.rs  terminal.rs
examples/example_progs/: fibonacci.sorth  fibonacci.txt  turing_machine.sorth
src/: engine.rs  errors.rs  lib.rs  main.rs  sorth.rs  standard.rs  tests.rs  types.rs  word.rs
src/sorth/: engine.rs  mod.rs  standard.rs  word.rs
src/standard/: comment_ops.rs  conditional_ops.rs  logic_ops.rs  loop_ops.rs  math_ops.rs  miscellaneus_ops.rs  mod.rs  stack_ops.rs  string_ops.rs  type_ops.rs  value_ops.rs  variable_ops.rs  word_ops.rs
