[package]
name = "sorth"
version = "0.1.0"
edition = "2021"

authors = ["m1cha1s"]

readme = "README.md"
license-file = "LICENSE"

repository = "https://github.com/m1cha1s/sorth"
documentation = "https://github.com/m1cha1s/sorth"
homepage = "https://github.com/m1cha1s/sorth"
description = """
Forth inspired interpreted programming language.
"""

include = ["src/", "LICENSE", "README.md"]

categories = ["no-std"]
keywords = ["Language", "Forth", "no_std"]

[dependencies]
